Tested: HandComparator, HandEvaluator
TODO:
Fix minor bugs.
* After round, big blind not showing as last bet
* After round program not asking if player wants to play one more round or not